--- a/src/assets/icons-reference.html
+++ b/src/assets/icons-reference.html
@@ -287,6 +287,14 @@
           <div class="icon cm-icon-whatsapp"></div>
           <input type="text" readonly="readonly" value="whatsapp">
         </li>
+        <li>
+          <div class="icon cm-icon-moon-o"></div>
+          <input type="text" readonly="readonly" value="moon-o">
+        </li>
+        <li>
+          <div class="icon cm-icon-sun-o"></div>
+          <input type="text" readonly="readonly" value="sun-o">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -561,6 +569,14 @@
         <li>
           <div data-icon="&" class="icon"></div>
           <input type="text" readonly="readonly" value="&amp;">
+        </li>
+        <li>
+          <div data-icon="'" class="icon"></div>
+          <input type="text" readonly="readonly" value="&#39;">
+        </li>
+        <li>
+          <div data-icon="(" class="icon"></div>
+          <input type="text" readonly="readonly" value="(">
         </li>
       </ul>
     </div>
